src/objects/HRPAS_Employee_Record__c.object
<CustomObject>
    <description>Records from HR-PAS Integration</description>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Info</fullName>
                </value>
                <value>
                    <fullName>Unable to insert</fullName>
                </value>
                <value>
                    <fullName>No match found</fullName>
                </value>
                <value>
                    <fullName>Out of date</fullName>
                </value>
                <value>
                    <fullName>Already Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRPAS_Affiliation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_African_American__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>African American</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTCModule__c</fullName>
    <description>The DTC Module that contains this class.</description>
    <inlineHelpText>The DTC Module that contains this class</inlineHelpText>
    <label>DTC Module</label>
    <referenceTo>DTCModule__c</referenceTo>
    <relationshipLabel>Module Classes</relationshipLabel>
    <relationshipName>Module_Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HRPAS_Asian__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Asian</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Department_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Employee_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Employment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employment Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>HR-PAS External ID</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Facility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_GSA_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GSA Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Gender__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grade</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Hawaiian_or_Pacific_Islander__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hawaiian or Pacific Islander</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Hispanic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hispanic</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Job_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Job_Title_Series__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Title Series</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Middle_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Normal_Hours__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Normal Hours</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Resident_Address_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resident Address City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Resident_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resident Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Resident_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resident Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Resident_Address_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resident Address State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Resident_Address_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resident Address Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_SSN__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>SSN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Separation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Separation Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Station_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Station City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Station_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Station State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Supervisor_Employee_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HR-PAS Supervisor Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_Title_38__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title 38</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_VISN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VISN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRPAS_White__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>White</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OHRS_Citizen_Code__c</fullName>
        <description>Value populated by HR-PAS integration.  &quot;1&quot; = Citizenship, &quot;2&quot; = No Citizenship
Never Used. Originally was intended for import from the HRPAS CITIZENSHIP_CO field. The field was added to the API, but was never added to the Delta or imported into OHRS.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>z__Citizen Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OHRS_Last_4_of_SSN__c</fullName>
        <description>Last four of Social Security Number for convenient identity confirmation.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Last 4 digits of Social Security Number.</inlineHelpText>
        <label>Last 4 of SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OHRS_Process_In_Next_Batch__c</fullName>
        <formula>(AND(NOT(ISBLANK(Record_Received__c)),ISBLANK(Record_Processed__c)))
||
(AND(NOT(ISBLANK(Record_Received__c)),NOT(ISBLANK(Record_Processed__c)),Record_Received__c&gt;=Record_Processed__c))</formula>
        <inlineHelpText>The field will be used to determine if the record should be picked up and processed by the HR-PAS batch. 
If it is TRUE, so yes, it will be processed in the next batch, if FALSE, the batch won&apos;t pick it up.</inlineHelpText>
        <label>Process In Next Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HR-PAS Employee Records</relationshipLabel>
        <relationshipName>HR_PAS_Employee_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Processed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Received</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_History__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status History</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                    <default>true</default>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>Redundant</fullName>
                </value>
                <value>
                    <fullName>Employee ID Matched</fullName>
                </value>
                <value>
                    <fullName>Combo Matched</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Inserted</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Duplicates Found</fullName>
                </value>
                <value>
                    <fullName>Matched By Interface (Inserted)</fullName>
                </value>
                <value>
                    <fullName>Matched By Interface (Existing Account)</fullName>
                </value>
                <value>
                    <fullName>Employee ID Matched, Account not processed</fullName>
                </value>
                <value>
                    <fullName>Combo Matched, Account not processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HR-PAS Employee Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Received__c</columns>
        <columns>Status__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Message__c</columns>
        <columns>HRPAS_First_Name__c</columns>
        <columns>HRPAS_Last_Name__c</columns>
        <columns>Parent_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>HR-PAS Employee Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR-PAS Employee Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>